--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,26 @@
   margin: 0 auto;
   padding: 2rem;
 }
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: 'sans-serif';
+    transition: .5s all;
+}
+
+body.light {
+    background-color: #f0f0f0;
+    color: #000;
+}
+
+body.dark {
+    background-color: #121212;
+    color: #fff;
+}
 
 .logo {
   height: 6em;
@@ -38,4 +58,38 @@
 
 .read-the-docs {
   color: #888;
+}
+
+
+.switch {
+    display: flex;
+    padding: 4px 7px;
+    background-color: #ddd;
+    border-radius: 20px;
+    cursor: pointer;
+   width: 50px;
+    justify-self: flex-end;
+}
+
+body.dark .switch {
+    background-color: #444;
+}
+ .switch input[type="checkbox"] {
+    appearance: none;
+    -webkit-appearance: none;
+    width: 16px;
+    height: 16px;
+    border: 2px solid #888;
+    border-radius: 50%;
+    outline: none;
+    cursor: pointer;
+    margin: 0;
+    background-color: #fff;
+    transition: .5s all;
+}
+
+ .switch input[type="checkbox"]:checked {
+    background-color: #2196f3;
+    border-color: #2196f3;
+    transform: translateX(17px);
 }
